use separate styles for login

--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -5,12 +5,21 @@
         <h1><%= 'Celebrate with us!' %></h1>
       </div>
       <div class="mb-3">
-        <%= form.label :passcode, '12/02/2023 - Philadelphia, PA' %>
+        <%= form.text_field :passcode, class: 'form-control', placeholder: 'Passcode' %>
+        <% flash.each do |type, message| %>
+          <p class="required required-<%= type %>">
+            <%= message %>
+          </p>
+        <% end %>
       </div>
       <div class="mb-3">
-        <%= form.text_field :passcode, class: 'form-control', placeholder: 'Passcode' %>
+        <%= form.submit "Submit", class: 'btn btn-light' %>
       </div>
-      <%= form.submit "Submit", class: 'btn btn-light' %>
+      <div class="mb-3">
+        Forgot the passcode?
+        <a class="forgot" href="mailto:us@angela-ryan.rsvp?subject=Passcode%20Request">Send us an email!</a>
+      </div>
     <% end %>
   </div>
+  <a target="_blank" href="/assets/calendar-invite.ics">+ Add to calendar</a>
 </div>
