--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -5,16 +5,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "login", "data-turbo-track": "reload" %>
   </head>
 
-  <body class="site-<%= @current_site.try(:body_class) || 'default' %>">
-  <% flash.each do |type, message| %>
-    <div class="alert alert-<%= type %>">
-      <%= message %>
-    </div>
-  <% end %>
+  <body class="login">
     <%= yield %>
   </body>
 </html>
