--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -16,8 +16,12 @@
         <%= form.submit "Submit", class: 'btn btn-light' %>
       </div>
       <div class="mb-3">
-        Forgot the passcode?
-        <a class="forgot" href="mailto:us@angela-ryan.rsvp?subject=Passcode%20Request">Send us an email!</a>
+        <p>
+          <small>
+            Forgot the passcode?
+            <a href="mailto:us@angela-ryan.rsvp?subject=Passcode%20Request">Send us an email!</a>
+          </small>
+        </p>
       </div>
     <% end %>
   </div>
