--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -15,7 +15,7 @@ body.login .form-container {
 body.login .form-container .form {
     width: 60%;
     margin: 0 auto;
-    background-color: rgba(255,255,255,0.4);
+    background-color: rgba(255,255,255,0.5);
     padding: 3em 1em;
     border-radius: 1em;
 }
@@ -25,8 +25,12 @@ body.login .form-container .form .btn{
 }
 
 body.login .form-container .form h1{
-    font-family: 'Tangerine', serif;
-    font-size: calc(1.8rem + 1.5vw);
+    font-family: 'Water Brush', serif;
+    font-size: calc(1.3rem + 1.5vw);
+    -webkit-text-fill-color: transparent;
+    background: -webkit-linear-gradient(transparent, transparent), url(/assets/celebrate-text.jpeg) repeat;
+    background: -o-linear-gradient(transparent, transparent);
+    -webkit-background-clip: text;
 }
 
 body.login .form-container .form p.required{
