--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -13,7 +13,7 @@
         <% end %>
       </div>
       <div class="mb-3">
-        <%= form.submit "Submit", class: 'btn btn-light' %>
+        <%= form.submit "Submit", class: 'btn btn-danger' %>
       </div>
       <div class="mb-3">
         <p>
