--- a/app/views/sites/admin/_guests.html.erb
+++ b/app/views/sites/admin/_guests.html.erb
@@ -1,40 +1,73 @@
-<%= form_with url: guests_path do |form| %>
-  <table id="mapping" class="table"></table>
-  <% @guests = [] %>
+
+<% # TODO: remove stubs %>
+<% @groups = [['Select a group', nil], "Angela's Family", "Ryans's Family"] %>
+<% @filter_groups = [['Filter by group', nil], "Angela's Family", "Ryans's Family"] %>
+
+<%= form_with url: guests_path, id: 'guests' do |form| %>
   <%= form.hidden_field :guests_data, value: @guests.to_json %>
-  <fieldset>
-    <% @groups = [nil, "Angela's Family", "Ryans's Family"] %>
-    <% @relationships = [nil, "Grandmom", "Aunt"] %>
-    <% @going = [nil, "Yes", "No"] %>
-    <div class="mb-2">
-      <%= form.label 'Guest Name', for: :name, class: 'form-label'%>
-      <%= form.text_field :name, class: 'form-control' %>
-    </div>
-    <div class="mb-2">
-      <%= form.label 'Group', for: :group, class: 'form-label'%>
-      <%= form.select :group, options_for_select(@groups), {}, class: 'form-control'%>
-    </div>
-    <div class="mb-2">
-      <%= form.label 'Relationship', for: :relationship, class: 'form-label'%>
-      <%= form.select :relationship, options_for_select(@relationships), {}, class: 'form-control'%>
-    </div>
-    <div class="mb-2">
-      <%= form.label 'Additional guests', for: :additional, class: 'form-label'%>
-      <%= form.select :additional, options_for_select((0..4)), {}, class: 'form-control'%>
-    </div>
-    <div class="mb-2">
-      <%= form.label 'Going', for: :going, class: 'form-label'%>
-      <%= form.select :going, options_for_select(@going), {}, class: 'form-control'%>
-    </div>
-    <div class="mb-2">
-        <%= form.button 'Add to guest list', class: 'btn btn-secondary add', type: :button, onclick: 'addRow()' %>
-    </div>
-  </fieldset>
-  <div class="mt-3 text-center">
-    <%= form.button "Save all changes", class: 'btn btn-primary save' %>
-  </div>
 <% end %>
+
+<div class="row text-center border mb-3 p-3">
+  <div class="col">
+    <span class="NUM">2</span>
+    <div class="LABEL">
+      <span class="INNER">Invited</span>
+    </div>
+  </div>
+  <div class="col">
+    <span class="NUM">0</span>
+    <div class="LABEL">
+      <span class="INNER">Yes</span>
+    </div>
+  </div>
+  <div class="col">
+    <span class="NUM">0</span>
+    <div class="LABEL">
+      <span class="INNER">No</span>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="float-start">
+    <%= select_tag :group_filter, options_for_select(@filter_groups), class: 'form-control', onchange: 'filterByGroup()' %>
+  </div>
+  <div class="float-end">
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#new_guest_form">Add guests</button>
+  </div>
+</div>
+
+<table id="guest_list" class="table"></table>
+
+<!-- Modal -->
+<div class="modal fade" id="new_guest_form" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">New Guest</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="mb-2">
+          <%= select_tag :group, options_for_select(@groups), class: 'form-control'%>
+        </div>
+        <div class="row mb-2">
+          <div class="col">
+            <%= text_field_tag :first_name, nil, class: 'form-control', placeholder: "First Name", id: 'new-guest-name' %>
+          </div>
+          <div class="col">
+            <%= text_field_tag :last_name, nil, class: 'form-control', placeholder: "Last Name" %>
+          </div>
+        </div>
+        <div id="additional-guests" class="mb-2"></div>
+        <%= button_tag 'Add plus one', class: 'btn btn-dark add btn-sm', type: :button, onclick: 'additionalGuest()' %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" onclick="addRow()">Add to guest list</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <%= javascript_include_tag 'guests' %>
-<script>
-    renderGuests();
-</script>
