--- a/app/views/sites/main.html.erb
+++ b/app/views/sites/main.html.erb
@@ -1,3 +1,25 @@
-<h1>Main Site</h1>
-
-<a target="_blank" href="/assets/calendar-invite.ics">+ Add to calendar</a>
+<div class="welcome-container">
+  <div class="welcome-banner"></div>
+</div>
+<div class="container text-center">
+  <h1>Angela <small class="fs-5">&</small> Ryan</h1>
+  <h2>December 2nd, 2023</h2>
+  <h3>Philadelphia, PA</h3>
+  <h4><%= days_to_go %></h4>
+  <hr class="m-5"/>
+  <button class="btn btn-danger fs-1 px-5">RSVP</button>
+  <hr class="m-5"/>
+  <h3>TRUE STORY</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <hr class="m-5"/>
+  <img class="img-fluid" src="/assets/engaged.jpeg" />
+  <hr class="m-5"/>
+  <h3>FAQS</h3>
+  <h5>Is there parking nearby?</h5>
+  <p>There is ample street parking available and a parking garage for a fee.</p>
+  <h5>What time should I arrive?</h5>
+  <p>The ceremony starts promptly at 3pm.</p>
+  <h5>Are children allowed at the wedding?</h5>
+  <p>We respectfully ask that no children under the age of 12 attend the ceremony and reception.</p>
+  <hr class="m-5"/>
+</div>
