--- a/app/views/sites/main.html.erb
+++ b/app/views/sites/main.html.erb
@@ -30,7 +30,7 @@
   <h5>Do you have a wedding registry?</h5>
   <p>Cash gifts welcome — we’ll use them to make our honeymoon memorable!</p>
   <p><a class="btn btn-sm btn-light border" href="https://venmo.com/u/ryan-tulino"><img class="payment" src="/assets/venmo.png"/></a></p>
-  <p><a class="btn btn-sm btn-light border" href="paypal.me/weblincmadness"><img class="payment" src="/assets/paypal.png"/></a></p>
+  <p><a class="btn btn-sm btn-light border" href="paypal.me/tulino23"><img class="payment" src="/assets/paypal.png"/></a></p>
   <hr class="m-5"/>
 </div>
 
