--- a/app/views/sites/main.html.erb
+++ b/app/views/sites/main.html.erb
@@ -8,10 +8,9 @@
   <h4><%= days_to_go %></h4>
   <hr class="m-5"/>
   <%= button_tag "RSVP", class: 'btn btn-danger fs-1 px-5', onclick: 'showRsvpForm(this)' %>
-  <div id="rsvp" class="border rounded m-5 p-5 d-none">
-    <p><%= "Please enter the first and last name of one member of your party below. If you're responding for you and a guest (or your family), you'll be able to RSVP for your entire group on the next page." %></p>
-    <%= text_field_tag :name, nil, class: 'form-control w-50 mx-auto', placeholder: "First and Last Name" %>
-    <p><small>Ex. Sarah Fortune (not The Fortune Family or Dr. & Mr. Fortune)</small></p>
+  <div id="rsvp" class="border rounded m-5 p-2 d-none">
+    <p><%= "Please enter the first and last name of one member of your party below." %></p>
+    <p><%= text_field_tag :name, nil, class: 'form-control', placeholder: "First and Last Name" %></p>
     <%= button_tag "Continue", class: 'btn btn-secondary' %>
   </div>
   <hr class="m-5"/>
