--- a/app/views/sites/main.html.erb
+++ b/app/views/sites/main.html.erb
@@ -6,35 +6,68 @@
   <h2>December 2nd, 2023</h2>
   <h3>Philadelphia, PA</h3>
   <h4><%= days_to_go %></h4>
-  <hr class="m-5"/>
+
+  <!-- RSVP Form -->
+  <hr id="rsvp-header" class="m-5"/>
   <%= button_tag "RSVP", class: 'btn btn-danger fs-1 px-5', onclick: 'showRsvpForm(this)' %>
   <div id="rsvp" class="border rounded m-3 p-2 d-none">
-    <p><%= "Please enter the first and last name of one member of your party below." %></p>
-    <p>
-      <%= text_field_tag :guest, nil, class: 'form-control', placeholder: "First and Last Name" %>
-      <small id="name-required" class="d-none text-danger">Name is required!</small>
-    </p>
-    <script>
-        document.getElementById("guest").addEventListener("keypress", function(event) {
-            if (event.key === "Enter") { findGuest(); }
-        });
-    </script>
-    <%= button_tag "Continue", id: 'submit-rsvp', class: 'btn btn-secondary fs-4', onclick: 'findGuest()' %>
-    <%= hidden_field_tag :guests, guests_data %>
+    <div id="rsvp-form-container">
+        <%= hidden_field_tag :guests, guests_data %>
+        <p><%= "Please enter the first and last name of one member of your party below." %></p>
+        <p>
+          <%= text_field_tag :guest, nil, class: 'form-control', placeholder: "First and Last Name" %>
+          <small id="name-required" class="d-none text-danger">Name is required!</small>
+        </p>
+        <script>
+            // Submit form if enter pressed.
+            document.getElementById("guest").addEventListener("keypress", function(event) { if (event.key === "Enter") { findGuest(); } });
+        </script>
+        <%= button_tag "Continue", id: 'submit-rsvp', class: 'btn btn-primary fs-4', onclick: 'findGuest()' %>
+    </div>
+    <!-- No guests found alert -->
     <div id="none-found" class="d-none alert alert-warning">Couldn't find you, sorry! Please <a href="mailto:us@angela-ryan.rsvp">contact us</a> to be added to the guest list.</div>
-    <div id="found" class="p-3 text-start"></div>
+
+    <!--Display matching guests -->
+    <div id="matching-guests" class="p-3 text-start"></div>
+
+    <!-- Guest RSVP Modal -->
+    <div id="update_rsvp_modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Will you be attending?</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <%= form_with url: "/rsvp", method: :post, id: 'rsvp-form' do %>
+            <div id="rsvp-form-body"></div>
+            <% end %>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" onclick="saveRsvpChanges()">Save Changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+
+  <!-- Our story! -->
   <hr class="m-5"/>
   <h3>TRUE STORY</h3>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+  <!-- Our photos! -->
   <hr class="m-5"/>
   <img class="img-fluid" src="/assets/engaged.jpeg" />
+
+  <!-- FAQS -->
   <hr class="m-5"/>
   <h3>FAQS</h3>
   <h5>Is there parking nearby?</h5>
   <p>There is ample street parking available and a parking garage for a fee.</p>
   <h5>What time should I arrive?</h5>
-  <p>The ceremony starts promptly at 3pm.</p>
+  <p>Doors open at 2:40pm. The ceremony starts promptly at 3pm.</p>
   <h5>Are children allowed at the wedding?</h5>
   <p>We respectfully ask that no children under the age of 12 attend the ceremony and reception.</p>
   <h5>Do you have a wedding registry?</h5>
