--- a/app/views/sites/main.html.erb
+++ b/app/views/sites/main.html.erb
@@ -1,11 +1,14 @@
-<div class="welcome-container">
-  <div class="welcome-banner"></div>
-</div>
-<div class="container text-center">
-  <h1>Angela <small class="fs-5">&</small> Ryan</h1>
+<!--<div class="welcome-container">-->
+  <!--<div class="welcome-banner"></div>-->
+<!--</div>-->
+<div class="container text-center mt-5 pb-5">
+  <h1>Angela <small class="fs-4">&</small> Ryan</h1>
+  <h2>are getting married!</h2>
+  <hr class="m-5"/>
   <h2>December 2nd, 2023</h2>
+  <h3><a href="https://goo.gl/maps/PuU4d5M4VLqQwxm28" target="_blank"><i class="bi bi-globe-americas"></i> World Cafe Live <i class="bi bi-music-note-beamed"></i></a></h3>
   <h3>Philadelphia, PA</h3>
-  <h4><%= days_to_go %></h4>
+  <h4 class="shimmer"><%= days_to_go %></h4>
 
   <!-- RSVP Form -->
   <hr id="rsvp-header" class="m-5"/>
@@ -18,8 +21,8 @@
           <%= text_field_tag :guest, nil, class: 'form-control', placeholder: "First and Last Name" %>
           <small id="name-required" class="d-none text-danger">Name is required!</small>
         </p>
+        <!-- Submit form if enter pressed. -->
         <script>
-            // Submit form if enter pressed.
             document.getElementById("guest").addEventListener("keypress", function(event) { if (event.key === "Enter") { findGuest(); } });
         </script>
         <%= button_tag "Continue", id: 'submit-rsvp', class: 'btn btn-primary fs-4', onclick: 'findGuest()' %>
