--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -5,6 +5,28 @@
 }
 .fade-in { animation: fadeIn 1s; }
 
+@keyframes shimmer {
+    0% {
+        background-position: -50rem top;
+    }
+    70% {
+        background-position: 12.5rem top;
+    }
+    100% {
+        background-position: 12.5rem top;
+    }
+}
+.shimmer {
+    background: #1c1c1c -webkit-gradient(linear, 100% 0, 0 0, from(#6c6b6b), color-stop(0.5, #646464), to(#171717));
+    background-position: -50rem top;
+    background-repeat: no-repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-animation-name: shimmer;
+    -webkit-animation-duration: 3.2s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-background-size: 50rem 100%;
+}
 
 /* Bootstrap overrides */
 .alert {
