--- a/app/views/sites/main.html.erb
+++ b/app/views/sites/main.html.erb
@@ -1,7 +1,9 @@
 <!--<div class="welcome-container">-->
   <!--<div class="welcome-banner"></div>-->
 <!--</div>-->
-<div class="container text-center mt-5 pb-5">
+<div class="container text-center pb-5">
+  <!-- Welcome text -->
+  <hr class="m-5">
   <h1>Angela <small class="fs-4">&</small> Ryan</h1>
   <h2>are getting married!</h2>
   <hr class="m-5"/>
@@ -38,7 +40,7 @@
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">Will you be attending?</h5>
+            <h5 class="modal-title">Who will be attending?</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
@@ -67,16 +69,24 @@
   <!-- FAQS -->
   <hr class="m-5"/>
   <h3>FAQS</h3>
+
   <h5>Is there parking nearby?</h5>
   <p>There is ample street parking available and a parking garage for a fee.</p>
+
   <h5>What time should I arrive?</h5>
   <p>Doors open at 2:40pm. The ceremony starts promptly at 3pm.</p>
+
   <h5>Are children allowed at the wedding?</h5>
   <p>We respectfully ask that no children under the age of 12 attend the ceremony and reception.</p>
+
+  <h5>Need a hotel for the night?</h5>
+  <p>Discounted rooms are available at the <a href="https://www.loewshotels.com/philadelphia-hotel">Loews Philadelphia Hotel</a>. Book using group code <code>TULINO23</code>.</p>
+
   <h5>Do you have a wedding registry?</h5>
   <p>Cash gifts welcome — we’ll use them to make our honeymoon memorable!</p>
   <p><a class="btn btn-sm btn-light border" href="https://venmo.com/u/ryan-tulino"><img class="payment" src="/assets/venmo.png"/></a></p>
   <p><a class="btn btn-sm btn-light border" href="https://paypal.me/tulino23"><img class="payment" src="/assets/paypal.png"/></a></p>
+
   <hr class="m-5"/>
 </div>
 
