--- a/app/views/sites/main.html.erb
+++ b/app/views/sites/main.html.erb
@@ -1,19 +1,18 @@
 <!--<div class="welcome-container">-->
   <!--<div class="welcome-banner"></div>-->
 <!--</div>-->
-<div class="container text-center pb-5">
+<div class="container text-center py-5">
   <!-- Welcome text -->
-  <hr class="m-5">
+  <div class="m-5"></div>
   <h1>Angela <small class="fs-4">&</small> Ryan</h1>
-  <h2>are getting married!</h2>
-  <hr class="m-5"/>
+  <h2 class="mb-4">are getting married!</h2>
   <h2>December 2nd, 2023</h2>
   <h3><a href="https://goo.gl/maps/PuU4d5M4VLqQwxm28" target="_blank"><i class="bi bi-globe-americas"></i> World Cafe Live <i class="bi bi-music-note-beamed"></i></a></h3>
   <h3>Philadelphia, PA</h3>
   <h4 class="shimmer"><%= days_to_go %></h4>
 
   <!-- RSVP Form -->
-  <hr id="rsvp-header" class="m-5"/>
+  <div id="rsvp-header" class="m-5"></div>
   <%= button_tag "RSVP", class: 'btn btn-danger fs-1 px-5', onclick: 'showRsvpForm(this)' %>
   <div id="rsvp" class="border rounded m-3 p-2 d-none">
     <div id="rsvp-form-container">
@@ -58,7 +57,7 @@
   </div>
 
   <!-- Our story! -->
-  <hr class="m-5"/>
+  <div class="divider m-3"></div>
   <h3>TRUE STORY</h3>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
