--- a/app/views/sites/main.html.erb
+++ b/app/views/sites/main.html.erb
@@ -86,6 +86,7 @@
   <p><a class="btn btn-sm btn-light border" href="https://paypal.me/tulino23"><img class="payment" src="/assets/paypal.png"/></a></p>
 
   <hr class="m-5"/>
+  <p>Made with <i class="bi bi-heart-fill text-danger"></i> in Philadelphia</p>
 </div>
 
 <%= javascript_include_tag 'rsvp' %>
