--- a/app/views/sites/main.html.erb
+++ b/app/views/sites/main.html.erb
@@ -4,7 +4,11 @@
 <div class="container text-center py-5">
   <!-- Welcome text -->
   <h1>Angela <small class="fs-4">&</small> Ryan</h1>
-  <h2 class="mb-4">are getting married!</h2>
+  <h2 class="mb-4">
+    <i class="bi bi-dash-lg fs-1 align-text-top"></i>
+    Are Getting Married!
+    <i class="bi bi-dash-lg fs-1 align-text-top"></i>
+  </h2>
   <h2>December 2nd, 2023</h2>
   <h3><a href="https://goo.gl/maps/PuU4d5M4VLqQwxm28" target="_blank"><i class="bi bi-globe-americas"></i> World Cafe Live <i class="bi bi-music-note-beamed"></i></a></h3>
   <h3>Philadelphia, PA</h3>
