--- a/app/views/sites/main.html.erb
+++ b/app/views/sites/main.html.erb
@@ -9,7 +9,7 @@
     Are Getting Married!
     <i class="bi bi-dash-lg fs-1 align-text-top"></i>
   </h2>
-  <h2>December 2nd, 2023</h2>
+  <h2>Saturday, December 2nd</h2>
   <h3><a href="https://goo.gl/maps/PuU4d5M4VLqQwxm28" target="_blank"><i class="bi bi-globe-americas"></i> World Cafe Live <i class="bi bi-music-note-beamed"></i></a></h3>
   <h3>Philadelphia, PA</h3>
   <h4 class="shimmer"><%= days_to_go %></h4>
