--- a/app/views/sites/main/_home.html.erb
+++ b/app/views/sites/main/_home.html.erb
@@ -1,13 +1,12 @@
-
-<h2>Saturday, December 2nd</h2>
-<h4 class="shimmer"><%= days_to_go %></h4>
-
 <!-- Welcome photo -->
 <div class="welcome-container">
   <div class="welcome-banner"></div>
 </div>
 
 <!-- Our story! -->
+<div class="m-5"></div>
+<h2>Saturday, December 2nd</h2>
+<h4 class="shimmer"><%= days_to_go %></h4>
 <div class="divider m-5"></div>
 <h3>OUR STORY</h3>
 <p style="white-space: pre-wrap;">
