add travel details

--- a/app/views/sites/main/_home.html.erb
+++ b/app/views/sites/main/_home.html.erb
@@ -5,17 +5,29 @@
 
 <!-- Our story! -->
 <div class="m-5"></div>
+
 <h2>Saturday, December 2nd</h2>
 <h4 class="shimmer"><%= days_to_go %></h4>
+
 <div class="divider m-5"></div>
+
 <h3>OUR STORY</h3>
 <p style="white-space: pre-wrap;">
   It all started in the summer of 2021 when Ryan and Angela first connected through a dating app (Hinge). Ryan asked Angela out on their first date to his favorite roast beef sandwich place in south Philly (Nicks). They almost immediately hit it off and soon after spent all their free time together. They enjoyed camping, cooking, concerts, eating out, traveling, spending time with family and taking Bella (Ryan’s dog) on long walks. Angela moved in with Ryan in April of 2022 and 8 months later Ryan proposed to Angela!
+</p>
 
+<!-- Our photos! -->
+<img class="img-fluid my-5" src="/assets/outside-nicks-philadelphia.jpeg" />
+
+<p style="white-space: pre-wrap;">
   How did Ryan propose?
   Angela: We went to world café live to have dinner and watch a band play. Once the band was done playing, he asked me to go on stage for a picture with him. I thought it was a silly idea and said no. As we were leaving, Ryan wanted to check out their larger stage downstairs. I really didn’t want to go but I agreed to make it a very quick stop. He once again asked if I wanted a picture on the stage. I felt bad saying no again so we made our way to the stage.
   I’m sure you can guess the rest…. While taking pictures, he got down on one knee and proposed! We’ll be getting married on that same stage exactly one year after the proposal!
+</p>
 
+<img class="img-fluid my-5" src="/assets/engaged.jpeg" />
+
+<p style="white-space: pre-wrap;">
   What was your most memorable date?
   Both: Walking to our local diner on Sunday mornings for brunch. Angela loves drenching her corned beef hash in Ryan's homemade hot sauce!
 
