--- a/app/views/sites/main/_travel.html.erb
+++ b/app/views/sites/main/_travel.html.erb
@@ -1,6 +1,27 @@
-<h2>Travel info:</h2>
-<ul>
-  <li>Hotel block</li>
-  <li>Important dates</li>
-  <li>Weather</li>
-</ul>
+<div class="row">
+  <div class="col-6 border-right align-self-center">
+
+    <svg xmlns="http://www.w3.org/2000/svg" aria-labelledby="Hotel5" role="img" class="zui-svg-icon css-1ky1smp" viewBox="0 0 64 64" color="currentColor" fill="currentColor" style="width: 70px; height: 70px;"><title id="Hotel5">Hotel</title><g transform="translate(12 8)" fill="none" fill-rule="evenodd" stroke="currentColor"><circle cx="4" cy="48.5" r="2"></circle><circle cx="37" cy="48.5" r="2"></circle><path d="M.5 46h40" stroke-linecap="round"></path><path d="M2 21.995C2 12.056 10.057 4 20 4c9.941 0 18 8.06 18 17.995V46H2V21.995Z"></path><path d="M18.5 1.5h4" stroke-linecap="round"></path><path d="M20.5 1.5v2M23.5 34v9M32.5 34v9" stroke-linecap="square"></path><path stroke-linejoin="round" d="M5 23.5h14v20H5zM21 33.5h14v10H21zM9 20.5h6v3H9zM26 30.5h4v3h-4z"></path><path d="M5.5 28h13M5.5 30h13" stroke-linecap="square"></path></g></svg>
+
+    <p>Hotel</p>
+
+    <h2>LOEWS PHILADELPHIA HOTEL</h2>
+
+    <address>
+      1200 Market Street<br>
+      Philadelphia, PA 19107
+    </address>
+
+  </div>
+  <div class="col-6 align-self-center">
+
+    <p>To get the hotel block discounted rate, <a href="https://www.loewshotels.com/philadelphia-hotel" target="_blank">click here</a> to make hotel reservations online or call the toll-free number 888-563-9736.</p>
+
+  </div>
+</div>
+
+<div class="divider m-2"></div>
+
+<h2>Things to do</h2>
+
+<p>Coming soon...</p>
