--- a/app/views/sites/main.html.erb
+++ b/app/views/sites/main.html.erb
@@ -24,13 +24,10 @@
           <a class="nav-link fs-3" data-bs-toggle="tab" href="#nav-travel" role="tab" aria-controls="settings" aria-selected="false">Travel</a>
         </li>
         <li class="nav-item" role="presentation">
-          <a class="nav-link fs-3" data-bs-toggle="tab" href="#nav-photos" role="tab" aria-controls="settings" aria-selected="false">Photos</a>
-        </li>
-        <li class="nav-item" role="presentation">
-          <a class="nav-link fs-3" data-bs-toggle="tab" href="#nav-faqs" role="tab" aria-controls="settings" aria-selected="false">FAQS</a>
+          <a class="nav-link fs-3" data-bs-toggle="tab" href="#nav-registry" role="tab" aria-controls="settings" aria-selected="false">Registry</a>
         </li>
         <li class="nav-item align-self-center" role="presentation">
-          <button class="btn btn-sm btn-danger fs-3" data-bs-toggle="tab" data-bs-target="#nav-rsvp" role="tab" aria-controls="settings" aria-selected="false">RSVP</button>
+          <button class="btn btn-sm btn-danger fs-3 mx-1" data-bs-toggle="tab" data-bs-target="#nav-rsvp" role="tab" aria-controls="settings" aria-selected="false">RSVP</button>
         </li>
       </ul>
     </div>
@@ -46,11 +43,8 @@
     <div class="tab-pane fade" id="nav-travel" role="tabpanel" aria-labelledby="travel-tab">
       <%= render 'sites/main/travel' %>
     </div>
-    <div class="tab-pane fade" id="nav-photos" role="tabpanel" aria-labelledby="photos-tab">
-      <%= render 'sites/main/photos' %>
-    </div>
-    <div class="tab-pane fade" id="nav-faqs" role="tabpanel" aria-labelledby="faqs-tab">
-      <%= render 'sites/main/faqs' %>
+    <div class="tab-pane fade" id="nav-registry" role="tabpanel" aria-labelledby="registry-tab">
+      <%= render 'sites/main/registry' %>
     </div>
     <div class="tab-pane fade" id="nav-rsvp" role="tabpanel" aria-labelledby="rsvp-tab">
       <%= render 'sites/main/rsvp' %>
