--- a/app/views/sites/main/_venue.html.erb
+++ b/app/views/sites/main/_venue.html.erb
@@ -1,13 +1,23 @@
 <!-- Venue details -->
 <h4>Saturday, December 2nd</h4>
 <p>4:00 PM - 10:00 PM</p>
-<h5>
+<h4>
   <i class="bi bi-globe-americas"></i> World Cafe Live <i class="bi bi-music-note-beamed"></i>
-</h5>
-<p>
-  <a href="https://goo.gl/maps/PuU4d5M4VLqQwxm28" target="_blank">3025 Walnut St, Philadelphia, PA 19104</a>
-</p>
+  <address>
+    <a href="https://goo.gl/maps/PuU4d5M4VLqQwxm28" target="_blank">3025 Walnut St<br> Philadelphia, PA 19104</a>
+  </address>
+</h4>
+
+<div class="divider m-2"></div>
+
+<p>Doors open at 3:40pm. The ceremony starts promptly at 4pm.</p>
 
 <p>Semi-Formal: Tuxes and gowns are welcome, and so are suits and cocktail dresses.</p>
 
-<p>The ceremony, cocktail hour and reception will all take place indoors at World Cafe Live. We cant wait to see you all!</p>
+<p>The ceremony, cocktail hour and reception will all take place indoors at World Cafe Live.</p>
+
+<p>There is ample street parking available and a nearby parking lot or garage for a fee.</p>
+
+<p>We respectfully ask that no children under the age of 12 attend the ceremony and reception.</p>
+
+<p>We cant wait to see you all!</p>
