--- a/app/views/sites/main/_travel.html.erb
+++ b/app/views/sites/main/_travel.html.erb
@@ -5,11 +5,10 @@
 
     <p>Hotel</p>
 
-    <h2>LOEWS PHILADELPHIA HOTEL</h2>
+    <h3>LOEWS PHILADELPHIA HOTEL</h3>
 
     <address>
-      1200 Market Street<br>
-      Philadelphia, PA 19107
+      <a href="https://goo.gl/maps/iHW3fUbE5ztYEQCd8" target="_blank">1200 Market Street<br>Philadelphia, PA 19107</a>
     </address>
 
   </div>
