--- a/app/views/sites/main/_venue.html.erb
+++ b/app/views/sites/main/_venue.html.erb
@@ -1,12 +1,13 @@
 <!-- Venue details -->
 <h3>Saturday, December 2nd</h3>
 <p>4:00 PM - 10:00 PM</p>
-<h4>
+<h3>
   <i class="bi bi-globe-americas"></i> World Cafe Live <i class="bi bi-music-note-beamed"></i>
-  <address>
-    <a href="https://goo.gl/maps/PuU4d5M4VLqQwxm28" target="_blank">3025 Walnut St<br> Philadelphia, PA 19104</a>
-  </address>
-</h4>
+</h3>
+
+<address>
+  <a href="https://goo.gl/maps/PuU4d5M4VLqQwxm28" target="_blank">3025 Walnut Street<br>Philadelphia, PA 19104</a>
+</address>
 
 <p>Doors open at 3:40pm. The ceremony starts promptly at 4pm.</p>
 
