--- a/app/views/sites/main/_venue.html.erb
+++ b/app/views/sites/main/_venue.html.erb
@@ -1,4 +1,6 @@
 <!-- Venue details -->
+<img class="img-fluid my-5" src="/assets/worldcafelive.jpeg" />
+
 <h3>Saturday, December 2nd</h3>
 <p>4:00 PM - 10:00 PM</p>
 <h3>
