add things to do

--- a/app/views/sites/main/_todo.html.erb
+++ b/app/views/sites/main/_todo.html.erb
@@ -1,4 +1,6 @@
 <!-- Things to do -->
+<div class="m-3"></div>
+<h2>Our favorite things to do in Philly during the holiday season...</h2>
 
 <div class="divider m-2"></div>
 <h2>Christmas Village</h2>
