normalize photo margins

--- a/app/views/sites/main/_home.html.erb
+++ b/app/views/sites/main/_home.html.erb
@@ -1,16 +1,14 @@
 <!-- Welcome photo -->
-<div class="welcome-container">
+<div class="welcome-container my-4">
   <div class="welcome-banner"></div>
 </div>
 
-<!-- Our story! -->
-<div class="m-5"></div>
-
+<!-- The big day -->
 <h2>Saturday, December 2nd</h2>
 <h4 class="shimmer"><%= days_to_go %></h4>
-
 <div class="divider m-4"></div>
 
+<!-- Our story! -->
 <h3>OUR STORY</h3>
 <p style="white-space: pre-wrap;">
   It all started in the summer of 2021 when Ryan and Angela first connected through a dating app (Hinge). Ryan asked Angela out on their first date to his favorite roast beef sandwich place in south Philly (Nicks). They almost immediately hit it off and soon after spent all their free time together. They enjoyed camping, cooking, concerts, eating out, traveling, spending time with family and taking Bella (Ryan’s dog) on long walks. Angela moved in with Ryan in April of 2022 and 8 months later Ryan proposed to Angela!
