--- a/app/views/sites/main/_travel.html.erb
+++ b/app/views/sites/main/_travel.html.erb
@@ -1,3 +1,6 @@
+<!-- Hotel details -->
+<img class="img-fluid my-4" src="/assets/loews.jpeg" />
+
 <div class="row container">
   <div class="col-6 border-end align-self-center">
 
