--- a/app/views/sites/main/_venue.html.erb
+++ b/app/views/sites/main/_venue.html.erb
@@ -1,15 +1,16 @@
 <!-- Venue details -->
-<img class="img-fluid my-5" src="/assets/worldcafelive.jpeg" />
+<img class="img-fluid my-4" src="/assets/worldcafelive.jpeg" />
+
+<h2>
+  <i class="bi bi-globe-americas"></i> World Cafe Live <i class="bi bi-music-note-beamed"></i>
+</h2>
+
+<address>
+  <a href="https://goo.gl/maps/PuU4d5M4VLqQwxm28" target="_blank">3025 Walnut Street</a>
+</address>
 
 <h3>Saturday, December 2nd</h3>
 <p>4:00 PM - 10:00 PM</p>
-<h3>
-  <i class="bi bi-globe-americas"></i> World Cafe Live <i class="bi bi-music-note-beamed"></i>
-</h3>
-
-<address>
-  <a href="https://goo.gl/maps/PuU4d5M4VLqQwxm28" target="_blank">3025 Walnut Street<br>Philadelphia, PA 19104</a>
-</address>
 
 <p>Doors open at 3:40pm. The ceremony starts promptly at 4pm.</p>
 
