--- a/app/views/sites/main/_todo.html.erb
+++ b/app/views/sites/main/_todo.html.erb
@@ -1,5 +1,6 @@
 <!-- Things to do -->
-<div class="m-3"></div>
+<img class="img-fluid my-4" src="/assets/winterfest.jpeg" />
+
 <h2>Our favorite things to do in Philly during the holiday season...</h2>
 
 <div class="divider m-3"></div>
