--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -19,7 +19,7 @@
         <p>
           <small>
             Forgot the passcode?
-            <a href="mailto:us@angela-ryan.rsvp?subject=Passcode%20Request">Send us an email</a>
+            <a href="mailto:us@angela-ryan.com?subject=Passcode%20Request">Send us an email</a>
           </small>
         </p>
       </div>
