--- a/app/views/sites/main/_rsvp.html.erb
+++ b/app/views/sites/main/_rsvp.html.erb
@@ -15,7 +15,7 @@
     <%= button_tag "Continue", id: 'submit-rsvp', class: 'btn btn-primary fs-4', onclick: 'findGuest()' %>
   </div>
   <!-- No guests found alert -->
-  <div id="none-found" class="d-none alert alert-warning">Couldn't find you, sorry! Please <a href="mailto:us@angela-ryan.rsvp">contact us</a> to be added to the guest list.</div>
+  <div id="none-found" class="d-none alert alert-warning">Couldn't find you, sorry! Please <a href="mailto:us@angela-ryan.com">contact us</a> to be added to the guest list.</div>
 
   <!--Display matching guests -->
   <div id="matching-guests" class="p-3 text-start"></div>
